--- a/index.html
+++ b/index.html
@@ -5,227 +5,239 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>КБ / Производственная студия</title>
   <style>
-/* Общий стиль */
-body {
-  margin: 0;
-  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-  background-color: #0b0b0c; /* почти черный фон */
-  color: #e6e6e6; /* светло-серый текст */
-}
+    /* --- Базовые стили --- */
+    body {
+      margin: 0;
+      font-family: 'Segoe UI', Roboto, sans-serif;
+      background: #f4f6f8;
+      color: #1c1c1c;
+      scroll-behavior: smooth;
+    }
+    a { text-decoration: none; color: inherit; }
+    img { max-width: 100%; display: block; }
 
-a {
-  color: #ff0033; /* агрессивный красный */
-  text-decoration: none;
-}
+    /* --- Шапка --- */
+    header {
+      background: #0a1e36;
+      color: #fff;
+      padding: 15px 30px;
+      display: flex;
+      align-items: center;
+      height: 80px;
+    }
+    header .logo {
+      font-size: 1.5em;
+      font-weight: bold;
+    }
 
-a:hover {
-  color: #ff3366;
-}
+    /* --- CTA полоска --- */
+    .cta-bar {
+      background: #1c2b42;
+      display: flex;
+      justify-content: center;
+      padding: 10px 0;
+    }
+    .cta-bar a {
+      margin: 0 15px;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      color: #fff;
+      font-size: 0.9em;
+    }
+    .cta-bar a img {
+      width: 32px;
+      margin-bottom: 5px;
+    }
 
-/* Шапка */
-header {
-  background-color: #111;
-  color: #fff;
-  text-align: center;
-  padding: 20px;
-  border-bottom: 3px solid #ff0033;
-}
+    /* --- Главный блок (шаги) --- */
+    .steps {
+      display: flex;
+      flex-wrap: wrap;
+      justify-content: center;
+      padding: 50px 20px;
+      gap: 30px;
+      background: #e9edf4;
+    }
+    .step-card {
+      background: #fff;
+      flex: 1 1 250px;
+      max-width: 300px;
+      padding: 25px;
+      border-radius: 12px;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      text-align: center;
+    }
+    .step-card img {
+      width: 60px;
+      margin-bottom: 20px;
+    }
+    .step-card h3 {
+      margin: 0 0 10px 0;
+      font-size: 1.2em;
+    }
+    .step-card p {
+      font-style: italic;
+      font-size: 0.95em;
+      color: #555;
+    }
 
-header img {
-  max-height: 50px;
-}
+    /* --- Кейсы --- */
+    .cases {
+      padding: 50px 20px;
+      background: #f4f6f8;
+    }
+    .case-group {
+      display: flex;
+      justify-content: center;
+      gap: 15px;
+      margin-bottom: 40px;
+    }
+    .case-group img {
+      flex: 1;
+      max-width: 300px;
+      border-radius: 10px;
+      object-fit: cover;
+    }
 
-/* CTA полоса */
-.cta-bar {
-  display: flex;
-  justify-content: center;
-  background-color: #1a1a1d;
-  padding: 15px;
-  border-bottom: 2px solid #ff0033;
-}
+    /* --- Этапы --- */
+    .pipeline {
+      padding: 50px 20px;
+      background: #e9edf4;
+      text-align: center;
+    }
+    .pipeline h2 {
+      margin-bottom: 30px;
+    }
+    .pipeline-icons {
+      display: flex;
+      justify-content: center;
+      flex-wrap: wrap;
+      gap: 40px;
+    }
+    .pipeline-icons div {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      width: 120px;
+    }
+    .pipeline-icons div img {
+      width: 50px;
+      margin-bottom: 10px;
+    }
 
-.cta-bar a {
-  margin: 0 15px;
-  font-size: 1.5rem;
-  color: #ff0033;
-}
+    /* --- Отзывы --- */
+    .reviews {
+      padding: 50px 20px;
+      background: #f4f6f8;
+      text-align: center;
+    }
+    .review-card {
+      background: #fff;
+      border-radius: 12px;
+      padding: 25px;
+      max-width: 400px;
+      margin: 15px auto;
+      box-shadow: 0 4px 12px rgba(0,0,0,0.08);
+    }
+    .review-card p {
+      font-style: italic;
+      color: #555;
+    }
 
-.cta-bar a:hover {
-  color: #ff3366;
-}
+    /* --- Вопросы --- */
+    .faq {
+      padding: 50px 20px;
+      background: #e9edf4;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .faq h3 {
+      cursor: pointer;
+      padding: 10px;
+      background: #1c2b42;
+      color: #fff;
+      border-radius: 6px;
+      margin-bottom: 5px;
+    }
+    .faq div {
+      display: none;
+      padding: 10px 15px;
+      background: #fff;
+      border-radius: 6px;
+      margin-bottom: 10px;
+    }
 
-/* Блок шагов */
-.steps {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
-  padding: 40px 20px;
-  background-color: #0f0f11;
-}
+    /* --- Контакты --- */
+    .contacts {
+      padding: 50px 20px;
+      background: #f4f6f8;
+      max-width: 600px;
+      margin: 0 auto;
+    }
+    .contacts h2 {
+      margin-bottom: 25px;
+      text-align: center;
+    }
+    .contacts ul {
+      list-style: none;
+      padding: 0;
+      margin-bottom: 25px;
+    }
+    .contacts li {
+      margin-bottom: 10px;
+    }
+    .contact-form {
+      display: none;
+      flex-direction: column;
+      gap: 10px;
+    }
+    .contact-form input, .contact-form textarea {
+      padding: 10px;
+      border-radius: 6px;
+      border: 1px solid #ccc;
+      width: 100%;
+    }
+    .contact-form button {
+      padding: 10px;
+      border: none;
+      border-radius: 6px;
+      background: #0a1e36;
+      color: #fff;
+      cursor: pointer;
+    }
 
-.step-card {
-  background-color: #1a1a1d;
-  border: 1px solid #ff0033;
-  border-radius: 10px;
-  margin: 15px;
-  padding: 20px;
-  width: 250px;
-  box-shadow: 0 0 15px rgba(255, 0, 51, 0.3);
-  text-align: center;
-}
+    /* --- Корпоратив --- */
+    .corporate {
+      padding: 50px 20px;
+      background: #e9edf4;
+      max-width: 800px;
+      margin: 0 auto;
+    }
+    .corporate ul {
+      list-style: none;
+      padding: 0;
+    }
+    .corporate li {
+      margin-bottom: 10px;
+    }
 
-.step-card h3 {
-  color: #ff0033;
-  margin-bottom: 10px;
-}
-
-.step-card p {
-  font-style: italic;
-  color: #ccc;
-}
-
-/* Кейсы */
-.cases {
-  padding: 40px 20px;
-  background-color: #111;
-}
-
-.cases h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.case-group {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-}
-
-.case-group img {
-  margin: 10px;
-  max-width: 200px;
-  border: 2px solid #ff0033;
-  border-radius: 8px;
-}
-
-/* Этапы */
-.pipeline {
-  background-color: #0f0f11;
-  padding: 40px 20px;
-}
-
-.pipeline h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.roadmap {
-  display: flex;
-  justify-content: space-around;
-  flex-wrap: wrap;
-}
-
-.roadmap .stage {
-  background: #1a1a1d;
-  border: 1px solid #ff0033;
-  border-radius: 8px;
-  padding: 20px;
-  margin: 10px;
-  text-align: center;
-  width: 150px;
-  box-shadow: 0 0 10px rgba(255, 0, 51, 0.3);
-}
-
-/* Отзывы */
-.reviews {
-  background-color: #111;
-  padding: 40px 20px;
-}
-
-.reviews h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.review {
-  margin: 20px auto;
-  max-width: 600px;
-  padding: 20px;
-  border-left: 3px solid #ff0033;
-  background-color: #1a1a1d;
-  font-style: italic;
-}
-
-/* FAQ */
-.faq {
-  background-color: #0f0f11;
-  padding: 40px 20px;
-}
-
-.faq h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.faq-item {
-  margin-bottom: 15px;
-}
-
-.faq-item summary {
-  font-weight: bold;
-  cursor: pointer;
-  color: #ff0033;
-}
-
-.faq-item p {
-  margin: 10px 0 0;
-  color: #ccc;
-}
-
-/* Контакты */
-.contacts {
-  background-color: #111;
-  padding: 40px 20px;
-}
-
-.contacts h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.contact-list {
-  text-align: center;
-}
-
-.contact-list a {
-  display: block;
-  margin: 5px 0;
-  color: #ff3366;
-}
-
-/* Корпоративный блок */
-.corporate {
-  background-color: #0f0f11;
-  padding: 40px 20px;
-}
-
-.corporate h2 {
-  text-align: center;
-  color: #ff0033;
-  margin-bottom: 20px;
-}
-
-.corporate a {
-  display: block;
-  margin: 5px 0;
-  color: #ff3366;
-}
-
+    /* --- Прочее --- */
+    .scroll-left {
+      position: fixed;
+      top: 50%;
+      left: 10px;
+      transform: translateY(-50%);
+      background: #0a1e36;
+      color: #fff;
+      padding: 10px 12px;
+      border-radius: 6px;
+      cursor: pointer;
+      writing-mode: vertical-rl;
+    }
   </style>
 </head>
 <body>
